<resources>
    <string name="app_name">Autothentix</string>
    <string name="title_activity_act_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="lbl_logo">AUTOTHENTIX</string>
    <string name="lbl_subtitle">Sheets Nevermore</string>
    <string name="lbl_cadastrar">Cadastrar</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_senha">Senha</string>
    <string name="btn_Entrar">Entrar</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="edt_login">Login</string>
    <string name="edt_senha">Senha</string>
    <string name="edt_confsenha">Confirme a senha</string>
    <string name="edt_cpf">CPF</string>
    <string name="edt_telefone">Telefone</string>
    <string name="edt_nome">Nome</string>
    <string name="edt_nomeDoc">Nome do Documento</string>
    <string name="lbl_cadastro">Cadastro</string>
    <string name="edt_email">Email</string>
    <string name="lbl_datanasc">Nascimento</string>
    <string name="edt_datanasc">Nascimento</string>
    <string name="edt_nick">Apelido</string>
    <string name="lbl_sexo">Sexo</string>
    <string name="rbt_male">Masculino</string>
    <string name="rbt_female">Feminino</string>
    <string name="rbt_other">Outro</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="lbl_title_cadastro">CADASTRO</string>
    <string name="title_activity_act_home">Home</string>
    <string name="dialogo_titulo_erro">Erro</string>
    <string name="dialogo_botao_ok">OK</string>
    <string name="title_menu_conta">Conta</string>
    <string name="title_activity_act_perfil">Perfil</string>
    <string name="title_activity_act_editar_perfil">Editar Perfil</string>
    <string name="title_menu_editar">Editar</string>
    <string name="title_menu_salvar">Salvar</string>
    <string name="title_menu_cancelar">Cancelar</string>
    <string name="title_menu_sair">Sair</string>
    <string name="title_activity_act_criar_post">Criar Postagem</string>
    <string name="edt_texto_post">Digite aqui…</string>
    <string name="edt_texto_tags">Digite suas tags aqui…</string>
    <string name="title_menu_postar">Postar</string>
    <string name="exemplo_hint_usuario">Nome do Usuário</string>
    <string name="exemplo_hint_post">post do usuário</string>
    <string name="print_erro_validacao_post_campovazio">Digite algo para publicar.</string>
    <string name="print_erro_validacao_comentario_campovazio">Digite algo para comentar.</string>
    <string name="print_msg_postado">Postado com sucesso.</string>
    <string name="print_msg_comentado">Comentario enviado com sucesso.</string>
    <string name="print_erro_validacao_edt_senha_invalida">Senha inválida.</string>
    <string name="print_erro_validacao_edt_rg_invalido"> RG inválido.</string>
    <string name="print_erro_validacao_edt_data_invalida">Data inválida.</string>
    <string name="print_erro_validacao_edt_email_invalido">Email inválido.</string>
    <string name="print_erro_validacao_edt_nick_invalido">Nick inválido.</string>
    <string name="print_msg_alteracoes_salva">Alterações salvas.</string>
    <string name="btn_comentar">Comentar</string>
    <string name="exemplo_hint_comentario">A vida é como uma câmera. Foque no que é importante, capture bons momentos, desenvolva a vida a partir de negativos. E, se as coisas não derem certo, tire outra foto.</string>
    <string name="title_activity_act_criar_comentario">Criar Comentário</string>
    <string name="title_menu_comentar">Comentar</string>
    <string name="exemplo_hint_data">01/01/2017 às 12:12:00</string>
    <string name="title_activity_act_perfil_post">ActPerfilPost</string>
    <string name="search_hint">Pesquisar Posts</string>
    <string name="title_activity_act_searchable">pesquisa</string>
    <string name="title_menu_limpar_historico">Limpar histórico</string>
    <string name="print_histórico_apagado">Histórico apagado</string>
    <string name="lbl_nehum_post_encontrado">Nenhum post encontrado.</string>
    <string name="title_menu_follow">Seguir</string>
    <string name="title_menu_unfollow">Deixar de Seguir</string>
    <string name="txtseguidos">Seguindo</string>
    <string name="txtseguidores">Seguidores</string>
    <string name="txtseguidos2">Seguidos:</string>
    <string name="txtseguidores2">Seguidores:</string>
    <string name="title_activity_act_seguidos_seguidores">ActSeguidosSeguidores</string>
    <string name="title_menu_perfil">Perfil</string>
    <string name="tilte_menu_pesquisar">Pesquisar</string>
    <string name="title_menu_home">Home</string>
    <string name="lbl_bem_vindo">BEM-VINDO</string>
    <string name="title_activity_act_post">Postagem</string>
    <string name="btn_responder">Responder</string>
    <string name="exemplo_num_comentarios">0 Comentário</string>
    <string name="title_tab_home">Home</string>
    <string name="title_tab_favoritos">Favoritos</string>
    <string name="title_tab_recomendados">Recomendados</string>
    <string name="msg_login_senha_incorreto">Login ou senha incorretos.</string>
    <string name="msg_data_invalida">Data Inválida.</string>
    <string name="msg_senha_fora_padrão">A senha precisa ter entre 6 e 10 caracteres, ter ao menos uma letra minúscula, maiúscula e um número.</string>
    <string name="msg_senha_nao_confere_com_anterior">A senha digitada não confere com a anterior.</string>
    <string name="msg_email_invalido">Endereço de Email Inválido.</string>
    <string name="msg_cpf_invalido">CPF Inválido</string>
    <string name="msg_rg_invalido">RG Inválido</string>
    <string name="msg_nacionalidade_invalido">Nacionalidade Inválido</string>
    <string name="msg_profissão_invalido">Profissão Inválido</string>
    <string name="msg_cnpj_invalido">CNPJ Inválido</string>
    <string name="msg_telefone_invalido">Telefone Inválido</string>
    <string name="msg_valor_invalido">Valor Inválido</string>
    <string name="msg_cidade_invalido">Cidade Inválida</string>
    <string name="msg_estado_invalido">Estado Inválido</string>
    <string name="msg_nome_invalido">Nome Inválido</string>
    <string name="msg_sexo_invalido">Preencha o campo sexo</string>
    <string name="msg_razao_social_invalida">Razão Social Inválida</string>
    <string name="msg_cadastro_sucesso">Cadastrado com Sucesso!</string>
    <string name="pessoa_fis">Pessoa Física</string>
    <string name="pessoa_jur">Pessoa Jurídica</string>
    <string name="edt_razao_social">Razão Social</string>
    <string name="edt_cnpj">CNPJ</string>
    <string name="switch_tipo_cadastro_pessoa_fisica">Pessoa Física:&#160;&#160;</string>
    <string name="switch_tipo_cadastro_pessoa_juridica">Pessoa Jurídica:&#160;&#160;</string>
    <string name="content_description_logo_autothentix">Logo Autothentix</string>
    <string name="content_description_doc_icon">Ícone do documento</string>
    <string name="content_description_option_icon">Ícone do documento</string>
    <string name="screen_name_signup">Cadastro</string>
    <string name="screen_name_mining">Minerar</string>
    <string name="screen_name_create_doc">Novo Documento</string>
    <string name="screen_name_edit_doc">Editar Documento</string>
    <string name="log_screen_signup">SignUpScreen</string>
    <string name="log_screen_mining">MiningScreen</string>
    <string name="log_screen_main">MainScreen</string>
    <string name="log_screen_create_doc_service">CreateDocSer</string>
    <string name="log_screen_view_doc">viewDoc</string>
    <string name="log_screen_doc_fragment">DocFragment</string>
    <string name="sex_fem">Feminino</string>
    <string name="sex_male">Masculino</string>
    <string name="sex_other">Outro</string>
    <string name="choice_your_genre">Escolha seu gênero:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Sair</string>
    <string name="btn_ok">OK</string>
    <string name="btn_criar">Criar</string>
    <string name="edt_contratante_nome">Nome do Contratante</string>
    <string name="edt_contratante_nacionalidade">Nacionalidade do Contratante</string>
    <string name="edt_contratante_rg">RG do Contratante</string>
    <string name="edt_contratante_cpf">CPF do Contratante</string>
    <string name="edt_contratada_cnpj">CNPJ do Contratado</string>
    <string name="edt_contratada_nome">Nome do Contratado</string>
    <string name="edt_contratada_nacionalidade">Nacionalidade do Contratado</string>
    <string name="edt_contratada_profissao">Profissão do Contratado</string>
    <string name="edt_contratada_cpf">CPF do Contratado</string>
    <string name="edt_valor">Valor</string>
    <string name="edt_valor_extenso">Valor por Extenso</string>
    <string name="edt_cidade">Cidade</string>
    <string name="edt_estado">Estado</string>
    <string name="edt_data_atual">Data Atual</string>
    <string name="edt_contratada_nome_empresa">Nome da Empresa Contratada</string>
    <string name="msg_error_open_activity">Ocorreu um erro ao abrir a janela.   Tente novamente.</string>
    <string name="log_screen_doc_on_click_listener">DocOnClickListener</string>
    <string name="lbl_doc">Documento:</string>
    <string name="exemple_doc_name">Nome do Documento</string>
    <string name="lbl_contractor_data">Dados do Contratante</string>
    <string name="lbl_hired_data">Dados do Contratado</string>
    <string name="lbl_values">Valores</string>
    <string name="lbl_local">Local e Data</string>
    <string name="msg_success_logoff">Deslogado com Sucesso</string>
    <string name="msg_erro_login_or_password_wrong">Email ou senha incorretos.</string>
    <string name="logging_in">Logando…</string>
    <string name="mining_in">Minerando…</string>
    <string name="action_minerar">Minerar</string>
    <string name="exemple_blockchain">BLOCK{}</string>
    
</resources>
