<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usuario.gui.CadastroPjActivity"
    tools:layout_editor_absoluteY="81dp">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="11dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:thumbTint="@color/colorBtnBlue"
        app:layout_constraintBottom_toTopOf="@+id/editTextCpf"
        app:layout_constraintEnd_toStartOf="@+id/textViewPessoaJur"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextSenhapj"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/edt_senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextConfirmaSenhapj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailpj" />

    <EditText
        android:id="@+id/editTextCnpj"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginBottom="315dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/edt_cnpj"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/buttonCancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPessoaJur"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextConfirmaSenhapj"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="138dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/edt_confsenha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/buttonCadastrarpj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSenhapj" />

    <EditText
        android:id="@+id/editTextTelefone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/edt_telefone"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailpj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCnpj" />

    <EditText
        android:id="@+id/editTextEmailpj"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/edt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextSenhapj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTelefone" />



    <TextView
        android:id="@+id/textViewPessoaJur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="155dp"
        android:layout_marginTop="21dp"
        android:text="@string/pessoa_jur"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextCpf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/switch1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextRazaoSocial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/edt_razao_social"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextSenhapj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmaSenhapj"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonCadastrarpj"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/btn_cadastrar"
        android:textColor="@color/colorFontNormalLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonCancelar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRazaoSocial"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonCancelar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="17dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/btn_cancelar"
        android:textColor="@color/colorFontNormalLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonCadastrarpj"
        app:layout_constraintTop_toBottomOf="@+id/editTextCpf" />

</android.support.constraint.ConstraintLayout>