<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_end_card"
            android:layout_marginStart="@dimen/margin_start_card"
            android:layout_marginTop="@dimen/margin_top_card"
            app:cardCornerRadius="@dimen/card_border"
            app:cardElevation="@dimen/card_elevation"
            app:contentPadding="@dimen/card_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/switchTipoCadastro"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:text="@string/switch_cpf_cpnj"
                    android:textColor="@color/colorPostDataFont"
                    android:thumbTint="@color/colorBtnBlue" />

                <EditText
                    android:id="@+id/editTextNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/edt_nome"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editTextCpf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/edt_cpf"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/editTextRazaoSocial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/edt_razao_social"
                    android:inputType="textPersonName"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/editTextCnpj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/edt_cnpj"
                    android:inputType="number"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/edt_email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/editTextSexo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/lbl_sexo"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editTextDataNasc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/lbl_datanasc"
                    android:inputType="date" />

                <EditText
                    android:id="@+id/editTextTelef"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/edt_telefone"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/editTextSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/edt_senha"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/editTextConfirmaSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/edt_confsenha"
                    android:inputType="textPassword" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <View
                        android:id="@+id/view9"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/divider_thickness"
                        android:layout_gravity="center"
                        android:background="@color/divider" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnCancel"
                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick=""
                            android:text="@string/btn_cancelar"
                            android:textColor="@android:color/holo_red_dark" />


                        <View
                            android:id="@+id/view10"
                            android:layout_width="@dimen/divider_thickness"
                            android:layout_height="match_parent"
                            android:background="@color/divider" />

                        <Button
                            android:id="@+id/btnRegister"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="validarCadastrar"
                            android:text="@string/btn_cadastrar"
                            android:textColor="@android:color/holo_blue_dark" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</android.support.constraint.ConstraintLayout>