<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_top_card_recycleview"
    android:layout_marginStart="@dimen/margin_start_card_recycleview"
    android:layout_marginEnd="@dimen/margin_end_card_recycleview"
    android:layout_marginBottom="@dimen/margin_bottom_card_recycleview"
    app:cardElevation="@dimen/card_elevation_recycleview"
    app:cardUseCompatPadding="false"
    app:cardPreventCornerOverlap="true"
    app:cardCornerRadius="@dimen/card_corner_radius_recycleview">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_start_card"
        android:background="?android:attr/selectableItemBackground">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_file"
            android:contentDescription="@string/content_description_doc_icon" />

        <TextView
            android:id="@+id/lblNomeDoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_text_card_recycleview"
            android:layout_toEndOf="@+id/imageView2"
            android:layout_centerVertical="true"
            android:text="@string/lbl_doc"
            android:textColor="@color/color_text_label_in_list"
            android:textSize="@dimen/text_size_card_recycleview" />

        <TextView
            android:id="@+id/txtNomeDoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/margin_start_text_card_recycleview"
            android:layout_marginEnd="@dimen/margin_end_text_card_recycleview"
            android:layout_toEndOf="@+id/lblNomeDoc"
            android:layout_centerVertical="true"
            android:hint="@string/exemple_doc_name"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/color_text_value_in_list"
            android:textSize="@dimen/text_size_card_recycleview"
            android:textStyle="bold" />

    </RelativeLayout>
</android.support.v7.widget.CardView>
